# engine_wgpu

./: Cargo.toml  build.rs  gui_layout.ini  render_doc.bat  settings.rdc
src/: app.rs  gui.rs  main.rs  tree.rs
src/app/: assets.rs  renderer.rs  scene.rs
src/app/renderer/: camera.rs  framebuffer.rs  mesh.rs  model.rs  pipeline.rs  texture.rs
src/app/scene/: component.rs
src/app/scene/component/: mesh_filter.rs  transform.rs
src/app/shaders/: shader.wgsl
