[package]
name = "engine_wgpu"
version = "0.0.1"
edition = "2021"
authors = ["Tim Fritzen <kontakt@timfritzen.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.2"
env_logger = "0.10.0"
log = "0.4.19"
wgpu = "0.16.1"
pollster = "0.3.0"
bytemuck = {version="1.13.1", features=["derive"]}
anyhow = "1.0.71"
cgmath = "0.18.0"
renderdoc = {version = "0.11.0", optional=true}
tobj = {version = "4.0.0", features = ["async"]}
imgui = {version = "0.11.0", optional=true}
imgui-winit-support = {version = "0.11.0", optional = true}
imgui-wgpu = {git="https://github.com/Yatekii/imgui-wgpu-rs.git", optional = true}

[dependencies.image]
version = "0.24"
default-features=false
features=["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"


[features]
# default = ["diagnostic"]
default =["imgui"]
diagnostic = ["render-doc"]
render-doc = ["dep:renderdoc"]
imgui = ["dep:imgui","dep:imgui-wgpu", "dep:imgui-winit-support"]