[package]
name = "engine_wgpu"
version = "0.0.1"
edition = "2021"
authors = ["Tim Fritzen <kontakt@timfritzen.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.2"
env_logger = "0.10.0"
log = "0.4.19"
wgpu = "0.16.1"
pollster = "0.3.0"
bytemuck = {version="1.13.1", features=["derive"]}
anyhow = "1.0.71"
cgmath = {version = "0.18.0", features = ["serde"]}
renderdoc = {version = "0.11.0", optional=true}
tobj = {version = "4.0.0", features = ["async"]}
imgui = {version = "0.11.0", optional=true, features=["docking"]}
imgui-winit-support = {version = "0.11.0", optional = true}
imgui-wgpu = {git="https://github.com/Yatekii/imgui-wgpu-rs.git", optional = true}
serde = { version = "1.0.171", features = ["derive"]}
serde_yaml = "0.9"

[dependencies.image]
version = "0.24"
default-features=false
features=["png", "jpeg"]

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                 # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"


[features]
# default = ["diagnostic"]
default =["imgui"]
diagnostic = ["render-doc"]
render-doc = ["dep:renderdoc"]
imgui = ["dep:imgui","dep:imgui-wgpu", "dep:imgui-winit-support"]